*parameterized with prop offsetBildInOverview *fixed hydration error is caused by whitespace (including newlines) between <tr>, <td>, and other table elements in your JSX

--- a/frontend/src/components/termine/TerminFilmDetailsCard.css
+++ b/frontend/src/components/termine/TerminFilmDetailsCard.css
@@ -116,16 +116,7 @@
 /*    border: 1px solid rgba(255, 255, 255, 0.13);*/
 /*}*/
 
-.duration-box {
-    display: inline-block;
-    /*margin-top: 10px;*/
-    color: #FFD036;
-    padding: 5px;
-    border-radius: 5px;
-    border: 1px solid #FFD036;
 
-    font-size: 12px;
-}
 
 /* For embedded youtube video within <Card.Text> */
 /*###############################################*/
